--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,17 @@
-<!-- Header -->
-<app-top-bar></app-top-bar>
+<header>
+    <!-- Header -->
+    <app-top-bar></app-top-bar>
+</header>
 
-<!-- Wrapper -->
-<div class="wrapper">
-    <router-outlet></router-outlet>
-</div>
+<body>
+    <!-- Home -->
+    <app-layout></app-layout>
+    <!-- Wrapper -->
+    <div class="wrapper">
+        <router-outlet></router-outlet>
+    </div>
+</body>
+
+
 
 <!-- Footer -->
