--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div id="main">
+    <!-- Selector de fechas -->
+    <a href="FechaAnteriorURL">
+        <div id="fechaAnt"><mat-icon>keyboard_arrow_left</mat-icon>
+            <br>
+            FechaAnterior
+        </div>
+    </a>
+
+    
+</div>
