--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,1 +1,3 @@
-<img src="./assets/chicanaMainLogo.png.jpg" alt="null">
+<div id="banner">
+    <img src="./assets/chicanaMainLogo.png.jpg" alt="null">
+</div>
