--- a/src/styles.css
+++ b/src/styles.css
@@ -6,4 +6,8 @@
 
 body{
     background-color: #8B0000;
+    margin: 0;
+    padding: 0;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: "Roboto", "Helvetica Neue", sans-serif; }
