--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,5 +1,7 @@
 <!-- Carpeta layout para renderizar navbar estatica y resto de vistas -->
 <div id="mainLayout">
     <app-navbar></app-navbar>
-    <app-home></app-home>
+    <div id="principal">
+        <app-home></app-home>
+    </div>
 </div>
