--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -2,6 +2,7 @@
 <div id="mainLayout">
     <app-navbar></app-navbar>
     <div id="principal">
+        <!-- Renderizar acá -->
         <app-home></app-home>
     </div>
 </div>
