--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,13 +1,34 @@
+#mainHome {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#carreras{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50vw;
+    height: 1080px;
+    background-color: chocolate;
+}
+
 #manejaGP {
     display: flex;
     flex-direction: row;
     width: 100%;
+    height: 50px;
+    max-width: 600px;
+    justify-items: center;
+    align-items: center;
     background-color: blueviolet;
 }
 
 #manejaGP #titulo {
     display: flex;
+    flex-direction: row;
     width: 100%;
+    justify-content: center;
     background: black;
     color: #fff;
     font-size: 15px;
@@ -15,11 +36,25 @@
     text-shadow: #000 .1em .1em .1em;
     background: black;
     border: 1px solid #000;
-    margin-bottom: 1em;
+
 }
 
-#main a {
+#manejaGP a {
+    display: flex;
+    flex-direction: row;
     color: white;
+    justify-content: center;
     text-decoration: none;
-    text-align: center;
+}
+
+#tablaCarreras {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.tituloin {
+    background-color: #000;
 }
