--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,10 +34,9 @@
                         <td class="session-info"></td>
                     </tr>
                     <tr class="tituloin">
-                    
                         <td colspan="3">
                             <a href="gpActualURL">
-                                GRAN PREMIO
+                                ASD
                             </a>
                         </td>
                     </tr>
