--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <header>
-    <!-- Header -->
     <app-top-bar></app-top-bar>
-</header>
-
-<div class="layout-container">
-    <!-- Sidebar -->
-    <app-navbar></app-navbar>
-
-    <!-- Main content area (donde router-outlet reemplaza contenido dinámico) -->
-    <div class="content">
-        <router-outlet></router-outlet> <!-- Esto debe reemplazar el contenido según la ruta -->
-    </div>
-</div>
+  </header>
+  
+  <div class="content-container">
+    <aside>
+      <app-navbar></app-navbar>  <!-- Tu barra de navegación -->
+    </aside>
+    
+    <main>
+      <router-outlet></router-outlet>  <!-- Aquí se renderizarán las rutas como home y carreras -->
+    </main>
+  </div>
+  
