--- a/src/app/carreras/carreras.component.html
+++ b/src/app/carreras/carreras.component.html
@@ -1,13 +1,25 @@
 <h2>Calendario de Carreras F1 - 2024</h2>
 
-<ul>
-  <li *ngFor="let carrera of carrerasPaginadas">
-    <strong>{{ carrera.raceName }}</strong> - {{ carrera.Circuit.circuitName }}<br>
-    Localización: {{ carrera.Circuit.Location.locality }}, {{ carrera.Circuit.Location.country }}<br>
-    Fecha: {{ carrera.date }}<br>
-    Hora: {{ carrera.time }}
-  </li>
-</ul>
+<table class="styled-table">
+  <thead>
+    <tr>
+      <th>Carrera</th>
+      <th>Circuito</th>
+      <th>Ubicación</th>
+      <th>Fecha</th>
+      <th>Hora</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let carrera of carrerasPaginadas">
+      <td>{{ carrera.raceName }}</td>
+      <td>{{ carrera.Circuit.circuitName }}</td>
+      <td>{{ carrera.Circuit.Location.locality }}, {{ carrera.Circuit.Location.country }}</td>
+      <td>{{ carrera.date | date }}</td>
+      <td>{{ carrera.time }}</td>
+    </tr>
+  </tbody>
+</table>
 
 <!-- Botones de paginación -->
 <div class="pagination">
