--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,13 +36,13 @@
                     <tr class="tituloin">
                         <td colspan="3">
                             <a href="gpActualURL">
-                                ASD
+                                {{ proximaCarrera?.raceName }}
                             </a>
                         </td>
                     </tr>
                     <!-- En un esquema normal, esta fila sería Práctica. Hacer que muestre solo la P actual e intercambiar? o hacer dos filas más para P2 y P3? -->
                     <tr>
-                        <td id="diaSesion" class="session-time">diaHora</td>
+                        <td id="diaSesion" class="session-time"> {{ proximaCarrera?.FirstPractice?.date }} </td>
                         <td id="GP" class="session-type">tipoSesiondadadadadadadadadadadads</td>
                         <td id="info" class="session-info">
                             <a href="asda">
