--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,7 +43,7 @@
                     <!-- En un esquema normal, esta fila sería Práctica. Hacer que muestre solo la P actual e intercambiar? o hacer dos filas más para P2 y P3? -->
                     <tr >
                         
-                        <td id="diaSesion" class="session-time"> {{ proximaCarrera?.FirstPractice?.time }} </td>
+                        <td id="diaSesion" class="session-time" *ngIf=""> {{ proximaCarrera?.FirstPractice?.time }} </td>
                         <td id="GP" class="session-type"> </td>
                         <td id="info" class="session-info">
                             <a href="http://localhost:4200/masInfo">
