--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,5 +22,9 @@
       </div>
       <button type="submit" class="login-button">Login</button>
     </form>
+    <p class="mt-3">
+      ¿No tienes una cuenta?
+      <a href="/register">Regístrate aquí</a>
+    </p>
   </div>
 </div>
