--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,17 +1,23 @@
-<div class="container mt-5">
+<div class="login-container">
+  <div class="login-card">
     <h2>Registro</h2>
     <form (ngSubmit)="register()">
-      <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" id="email" [(ngModel)]="email" name="email" class="form-control" required />
+      <div class="input-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" [(ngModel)]="email" name="email" required />
       </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Contraseña</label>
-        <input type="password" id="password" [(ngModel)]="password" name="password" class="form-control" required />
+      <div class="input-group">
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" [(ngModel)]="password" name="password" required />
       </div>
-      <button type="submit" class="btn btn-primary">Registrarse</button>
+      <button type="submit" class="login-button">Registrarse</button>
     </form>
-  
+
+    <p class="mt-3">
+      ¿Ya tienes una cuenta?
+      <a href="/login">Inicia sesión aquí</a>
+    </p>
+
     <!-- Modal de error -->
     <app-error-modal 
       *ngIf="isModalVisible"
@@ -20,4 +26,4 @@
       (close)="closeModal()"
     ></app-error-modal>
   </div>
-  
+</div>
