--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,25 @@
 <div class="login-container">
   <div class="login-card">
     <h2>Login</h2>
-    <form>
+    <form (ngSubmit)="login()">
       <div class="input-group">
         <label for="email">Email Address</label>
         <input 
-            type="email" 
-            id="email" 
-            name="email" 
-            required 
+          type="email" 
+          id="email" 
+          [(ngModel)]="email" 
+          name="email" 
+          required 
         />
       </div>
       <div class="input-group">
         <label for="password">Password</label>
         <input 
-            type="password" 
-            id="password" 
-            name="password" 
-            required 
+          type="password" 
+          id="password" 
+          [(ngModel)]="password" 
+          name="password" 
+          required 
         />
       </div>
       <button type="submit" class="login-button">Login</button>
