--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,10 @@
 <div class="login-container">
   <div class="login-card">
     <h2>Login</h2>
+    
+    <!-- Mensaje de error -->
+    <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
+
     <form (ngSubmit)="login()">
       <div class="input-group">
         <label for="email">Email Address</label>
@@ -24,6 +28,7 @@
       </div>
       <button type="submit" class="login-button">Login</button>
     </form>
+    
     <p class="mt-3">
       ¿No tienes una cuenta?
       <a href="/register">Regístrate aquí</a>
