--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,14 +1,30 @@
 <div class="login-container">
   <div class="login-card">
     <h2>Registro</h2>
+    
+    <!-- Mensaje de error -->
+    <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
+
     <form (ngSubmit)="register()">
       <div class="input-group">
         <label for="email">Email</label>
-        <input type="email" id="email" [(ngModel)]="email" name="email" required />
+        <input 
+          type="email" 
+          id="email" 
+          [(ngModel)]="email" 
+          name="email" 
+          required 
+        />
       </div>
       <div class="input-group">
         <label for="password">Contraseña</label>
-        <input type="password" id="password" [(ngModel)]="password" name="password" required />
+        <input 
+          type="password" 
+          id="password" 
+          [(ngModel)]="password" 
+          name="password" 
+          required 
+        />
       </div>
       <button type="submit" class="login-button">Registrarse</button>
     </form>
@@ -17,13 +33,5 @@
       ¿Ya tienes una cuenta?
       <a href="/login">Inicia sesión aquí</a>
     </p>
-
-    <!-- Modal de error -->
-    <app-error-modal 
-      *ngIf="isModalVisible"
-      [errorMessage]="registrationError"
-      [isVisible]="isModalVisible"
-      (close)="closeModal()"
-    ></app-error-modal>
   </div>
 </div>
