--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -104,3 +104,11 @@ th, td {
     text-overflow: clip;
     width: 10%;
 }
+
+.detalles-sesion {
+    background-color: #f9f9f9;
+    padding: 10px;
+    border: 1px solid #ddd;
+    margin-top: 10px;
+  }
+  
