--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,14 +2,21 @@
     <div id="carreras">
         <div id="manejaGP">
             <a href="FechaAnteriorURL">
-                <div id="bAnt"
-                    style="display: flex; flex-direction: row; width: 80px; justify-content: center; height: 100%;">
+                <div id="bAnt" style="display: flex; flex-direction: row; width: 80px; justify-content: center; height: 100%;">
                     <mat-icon>keyboard_arrow_left</mat-icon>
                     <br>
                     Ant.
                 </div>
             </a>
-            <div id="titulo">GP<br>ACTUAL</div>
+            <div id="titulo">
+                GP: <br>
+                <span *ngIf=" proximaCarrera?.raceName; else loadingText">
+                    {{ proximaCarrera.raceName }}
+                </span>
+                <ng-template #loadingText>
+                    Cargando...
+                </ng-template>
+            </div>
             <a href="FechaSiguienteURL">
                 <div id="bSig" style="display: flex; flex-direction: row; width: 80px; justify-content: center;">
                     Sig.
@@ -19,119 +26,41 @@
             </a>
         </div>
 
-        <br style="clear: both">
-
-        <div style="height: 3vh;"></div>
-
-        <!-- La cantidad de celdas de la tabla se debería modificar según la cantidad de actividades que se realizan en ese GP. Ej.: hay Practicas 1,2,3 Qualy y Carrera o se agrega una carrera Sprint intermedia. -->
-        <div id="tablaCarreras" class="1">
+        <div id="tablaCarreras">
             <table [cellSpacing]="0">
+                <thead>
+                    <tr>
+                        <th>Día</th>
+                        <th>Tipo de Sesión</th>
+                        <th>Detalles</th>
+                    </tr>
+                </thead>
                 <tbody>
-                    <tr>
-                        <!-- Para cuando finaliza una sesión, cambiar estado a class="session-end" para reemplazarlo con un cartel de FIN -->
-                        <td class="session-time"></td>
-                        <td class="session-type"></td>
-                        <td class="session-info"></td>
-                    </tr>
-                    <tr class="tituloin">
-                        <td colspan="3">
-                            <a href="gpActualURL">
-                                {{ proximaCarrera?.raceName }}
-                            </a>
-                        </td>
-                    </tr>
-                    <!-- En un esquema normal, esta fila sería Práctica. Hacer que muestre solo la P actual e intercambiar? o hacer dos filas más para P2 y P3? -->
-                    <tr>
-                        <td id="diaSesion" class="session-time"> {{ weekday[sesionesProximaCarrera[0].fecha.getDay()] }}
-                        </td>
-                        <td id="GP" class="session-type"> </td>
-                        <td id="info" class="session-info">
-                            <a href="http://localhost:4200/masInfo">
-                                <div style="width: 100%;">
-                                    <i class="material-icons md-18">add_box</i>
+                    <!-- Declaración del *ngFor -->
+                    <ng-container *ngFor="let sesion of sesionesProximaCarrera; let i = index">
+                        <tr>
+                            <td class="session-time">
+                                {{ weekday[sesion.fecha.getDay()] }} 
+                                {{ isLive(sesion.fecha) }}
+                            </td>
+                            <td class="session-type">{{ sesion.tipo }}</td>
+                            <td class="session-info">
+                                <button (click)="toggleDetalles(i)">
+                                    <mat-icon>{{ sesion.mostrarDetalles ? 'expand_less' : 'expand_more' }}</mat-icon>
+                                </button>
+                            </td>
+                        </tr>
+                        <!-- Uso del ngIf dentro del mismo contexto -->
+                        <tr *ngIf="sesion.mostrarDetalles">
+                            <td colspan="3">
+                                <div class="detalles-sesion">
+                                    <p><strong>Fecha:</strong> {{ sesion.fecha | date: 'fullDate' }}</p>
+                                    <p><strong>Hora:</strong> {{ sesion.fecha | date: 'shortTime' }}</p>
+                                    <p><strong>Descripción:</strong> Información adicional sobre {{ sesion.tipo }}</p>
                                 </div>
-                            </a>
-                        </td>
-
-
-                    </tr>
-                    <tr>
-                        <td id="diaSesion" class="session-time">diaHora</td>
-                        <td id="GP" class="session-type">tipoSesion</td>
-                        <td id="info" class="session-info">
-                            <a href="asda">
-                                <div style="width: 100%;">
-                                    <i class="material-icons md-18">add_box</i>
-                                </div>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td id="diaSesion" class="session-time">diaHora</td>
-                        <td id="GP" class="session-type">tipoSesion</td>
-                        <td id="info" class="session-info">
-                            <a href="asda">
-                                <div style="width: 100%;">
-                                    <i class="material-icons md-18">add_box</i>
-                                </div>
-                            </a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
-        <div id="tablaCarreras" class="2">
-            <table [cellSpacing]="0">
-                <tbody>
-                    <tr>
-                        <!-- Para cuando finaliza una sesión, cambiar estado a class="session-end" para reemplazarlo con un cartel de FIN -->
-                        <td class="session-time"></td>
-                        <td class="session-type"></td>
-                        <td class="session-info"></td>
-                    </tr>
-                    <tr class="tituloin">
-
-                        <td colspan="3">
-                            <a href="gpActualURL">
-                                GRAN PREMIO
-                            </a>
-                        </td>
-                    </tr>
-                    <!-- En un esquema normal, esta fila sería Práctica. Hacer que muestre solo la P actual e intercambiar? o hacer dos filas más para P2 y P3? -->
-                    <tr>
-                        <td id="diaSesion" class="session-time">diaHora</td>
-                        <td id="GP" class="session-type">tipoSesiondadadadadadadadadadadadss</td>
-                        <td id="info" class="session-info">
-                            <a href="asda">
-                                <div style="width: 100%;">
-                                    <i class="material-icons md-18">add_box</i>
-                                </div>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td id="diaSesion" class="session-time">diaHora</td>
-                        <td id="GP" class="session-type">tipoSesion</td>
-                        <td id="info" class="session-info">
-                            <a href="asda">
-                                <div style="width: 100%;">
-                                    <i class="material-icons md-18">add_box</i>
-                                </div>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td id="diaSesion" class="session-time">diaHora</td>
-                        <td id="GP" class="session-type">tipoSesion</td>
-                        <td id="info" class="session-info">
-                            <a href="asda">
-                                <div style="width: 100%;">
-                                    <i class="material-icons md-18">add_box</i>
-                                </div>
-                            </a>
-                        </td>
-                    </tr>
+                            </td>
+                        </tr>
+                    </ng-container>
                 </tbody>
             </table>
         </div>
