Modificada funcion para actualizarCarrera (codigo redundante). Actualizado horario, ahora el atributo sesion.tiempo es el que se debe usar para la gestion de tiempo

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -49,11 +49,27 @@
                     <ng-container *ngFor="let sesion of sesionesProximaCarrera; let i = index">
                         <tr>
                             <td class="session-time">
-                                {{ weekday[sesion.fecha.getDay()] }}
-                                <br>
-                                {{ sesion.fecha | date: 'shortTime' }}
+                                <!-- Check if the session is live -->
+                                <ng-container *ngIf="isLive(sesion.fecha, sesion.tiempo, sessionDuration); else notLive">
+                                  LIVE!
+                                </ng-container>
+                                
+                                <!-- If not live, check if the session has ended -->
+                                <ng-template #notLive>
+                                  <ng-container *ngIf="isEnded(sesion.fecha, sesion.tiempo, sessionDuration); else defaultContent">
+                                    END
+                                  </ng-container>
+                                </ng-template>
+                                
+                                <!-- If neither live nor ended, show the session date and time -->
+                                <ng-template #defaultContent>
+                                  {{ weekday[sesion.fecha.getDay()] }}
+                                  <br>
+                                  {{ sesion.tiempo }} hs
+                                </ng-template>
+                              </td>
+                              
 
-                            </td>
                             <td class="session-type"
                                 [style.font-weight]="sesion.tipo === 'Carrera' ? 'bold' : 'normal'">
                                 {{ sesion.tipo }}
@@ -69,7 +85,7 @@
                             <td colspan="3">
                                 <div class="detalles-sesion">
                                     <p><strong>Fecha:</strong> {{ sesion.fecha | date: 'shortDate' }}</p>
-                                    <p><strong>Hora:</strong> {{ sesion.fecha | date: 'shortTime' }}</p>
+                                    <p><strong>Hora:</strong> {{ sesion.tiempo }} hs</p>
                                     <p>
                                         <strong>Descripción:</strong> Información adicional sobre {{ sesion.tipo }}
                                     </p>
